force-app/main/default/objects/Disruption_Log__c/Disruption_Log__c.object-meta.xml
<CustomObject>
    <description>Admin-owned record of flight disruptions, written by an autolaunched Flow registered as an ordered Trigger Action. Demonstrates Apex + Flow coexistence in one ordered registry.</description>
    <label>Disruption Log</label>
    <pluralLabel>Disruption Logs</pluralLabel>
    <nameField><label>Disruption Log Number</label><type>AutoNumber</type><displayFormat>DL-{00000000}</displayFormat></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>