force-app/main/default/objects/Disruption_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Disruption Logs</relationshipLabel>
    <relationshipName>Disruption_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>