force-app/main/default/objects/Disruption_Log__c/fields/Disruption_Type__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Type__c</fullName>
    <label>Disruption Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>